# darn

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  LICENSE  README.md
.github/workflows/: deploy.yml  pr-checks.yml
server/: pyproject.toml  requirements.txt
server/app/: __init__.py  config.py  health.py  main.py  models.py  otel.py  secrets.py  sessions.py  settings_model.py  sse.py  views.py
server/app/agent/: __init__.py  byo.py  health.py  medic.py  otel.py  runner.py  sabotage.py  stages.py  wiring.py
server/app/api/: __init__.py  demo.py  incidents.py  settings_api.py  state.py  yours.py
server/app/demo/: __init__.py  defects.py  fallbacks.py  orchestrator.py  seams.py
server/app/integrations/: __init__.py  dynatrace_events.py  dynatrace_mcp.py  github_client.py  (+1 more)
server/tests/: conftest.py  test_api_state.py  test_demo_flow.py  test_settings.py  test_sse.py  test_store_memory.py
shop/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
shop/app/: __init__.py  cart.py  catalog.py  checkout.py  config.py  inventory.py  main.py  models.py  otel.py  pay.py  state.py
shop/app/static/: shop.css  shop.js
shop/app/templates/: shop.html
shop/defects/: README.md
shop/defects/catalog-stampede/: patch.json
shop/defects/checkout-null/: patch.json
shop/defects/inventory-grenade/: patch.json
shop/defects/penny-shaver/: patch.json
shop/tests/: conftest.py  test_shop.py
trafficbot/: .dockerignore  Dockerfile  bot.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx
(+46 files in other folders)
